--- a/public/index.html
+++ b/public/index.html
@@ -8,8 +8,9 @@
 		<link rel="stylesheet" type="text/css" href="css/airtizen.css"/>
 	</head>
 	<body style="margin:0; hegith:100%;">
-		<div id='background'>
+		<div id='app'>
 		</div>
+		<script type="text/javascript" src="/socket.io/socket.io.js"></script>
 
 		<script type="text/javascript" src="js/jquery-1.8.2.js"></script>
 		<script type="text/javascript" src="js/jquery-ui.js"></script>
@@ -26,12 +27,9 @@
 
 		<script type="text/javascript" src="js/Contacts.js"></script>
 		<script type="text/javascript">
-			var icons = new Icons();
-			icons.add( new Icon( { name:'Contacts', image: 'img/contacts.png', command: new OpenContacts() } ) );
-			icons.add( new Icon( { name:'Test', image: 'img/contacts.png', command: new OpenContacts() } ) );
-			iconsView = new IconsView( { collection: icons } ).render();
-			$( '#background' ).append( iconsView.el );
 
+			app = new App();
+			new AppView( { model: app, el: $( '#app' )[0] } ).render();
 
 		</script>
 	</body>
