--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
 		<link rel="stylesheet" type="text/css" href="css/jquery.window.css"/>
 		<link rel="stylesheet" type="text/css" href="css/jquery.contextMenu.css"/>
 		<link rel="stylesheet" type="text/css" href="css/jquery.fileupload-ui.css"/>
+		<link rel="stylesheet" type="text/css" href="css/jplayer.blue.monday.css"/>
 		<link rel="stylesheet" type="text/css" href="css/bootstrap.css"/>
 		<link rel="stylesheet" href="http://blueimp.github.com/Bootstrap-Image-Gallery/css/bootstrap-image-gallery.min.css" />
 		<link rel="stylesheet" type="text/css" href="css/airtizen.css"/>
@@ -18,6 +19,9 @@
 
 		<script type="text/javascript" src="js/jquery-1.8.2.js"></script>
 		<script type="text/javascript" src="js/jquery-ui.js"></script>
+		<!--script type="text/javascript" src="js/jQuery.jPlayer.2.2.0/jquery.jplayer.min.js"></script-->
+		<script type="text/javascript" src="js/jquery.jplayer.js"></script>
+		<script type="text/javascript" src="js/jplayer.playlist.js"></script>
 		<script type="text/javascript" src="js/jquery.window.js"></script>
 		<script type="text/javascript" src="js/jquery.contextMenu.js"></script>
 		<script type="text/javascript" src="js/jquery.iframe-transport.js"></script>
@@ -42,6 +46,7 @@
 		<script type="text/javascript" src="js/Messages.js"></script>
 		<script type="text/javascript" src="js/Files.js"></script>
 		<script type="text/javascript" src="js/Photos.js"></script>
+		<script type="text/javascript" src="js/Musics.js"></script>
 
 		<script type="text/template" id="uploadForm">
 			<form id="fileupload" action="" method="POST" enctype="multipart/form-data" style="height: 300px">
@@ -92,7 +97,71 @@
 				<div class="progress progress-success progress-striped active" role="progressbar" aria-valuemin="0" aria-valuemax="100" aria-valuenow="0"><div class="bar" style="width:0%;"></div></div>
 			</td>
 		</script>
+		<script type="text/template" id="message-session">
+			<h3>{{text}}</h3>
+			<span>{{name}}</span><span>{{time}}</span>
+		</script>
 
+		<script type="text/template" id="music-player-template">
+			<div id="jp_player" class="jp-jplayer"></div>
+			<div id="jp_container" class="jp-audio">
+				<div class="jp-type-single">
+					<div class="jp-gui jp-interface">
+						<ul class="jp-controls">
+							<li><a href="javascript:;" class="jp-play" tabindex="1">play</a></li>
+							<li><a href="javascript:;" class="jp-pause" tabindex="1">pause</a></li>
+							<li><a href="javascript:;" class="jp-stop" tabindex="1">stop</a></li>
+							<li><a href="javascript:;" class="jp-mute" tabindex="1" title="mute">mute</a></li>
+							<li><a href="javascript:;" class="jp-unmute" tabindex="1" title="unmute">unmute</a></li>
+							<li><a href="javascript:;" class="jp-volume-max" tabindex="1" title="max volume">max volume</a></li>
+						</ul>
+						<div class="jp-progress">
+							<div class="jp-seek-bar">
+								<div class="jp-play-bar"></div>
+							</div>
+						</div>
+						<div class="jp-volume-bar">
+							<div class="jp-volume-bar-value"></div>
+						</div>
+						<div class="jp-time-holder">
+							<div class="jp-current-time"></div>
+							<div class="jp-duration"></div>
+
+							<ul class="jp-toggles">
+								<li><a href="javascript:;" class="jp-repeat" tabindex="1" title="repeat">repeat</a></li>
+								<li><a href="javascript:;" class="jp-repeat-off" tabindex="1" title="repeat off">repeat off</a></li>
+							</ul>
+						</div>
+					</div>
+					<div class="jp-title">
+						<ul>
+							<li>Cro Magnon Man</li>
+						</ul>
+					</div>
+					<div id='jp-palylist-name'><div>
+					<div class="jp-playlist-control">
+					</div>
+					<div class="jp-playlist">
+
+						<ul>
+
+							<!-- The method Playlist.displayPlaylist() uses this unordered list -->
+
+							<li></li>
+
+						</ul>
+
+					</div>
+					<div class="jp-no-solution">
+						<span>Update Required</span>
+						To play the media you will need to either update your browser to a recent version or update your <a href="http://get.adobe.com/flashplayer/" target="_blank">Flash plugin</a>.
+					</div>
+				</div>
+			</div>
+
+
+
+		</script>
 		<script type="text/javascript">
 
 			app = new App();
