[Title] Added skeleton code to" System mock and client."

--- a/public/index.html
+++ b/public/index.html
@@ -42,6 +42,7 @@
 		<script type="text/javascript" src="js/Utils.js"></script>
 		<script type="text/javascript" src="js/App.js"></script>
 
+        <script type="text/javascript" src="js/System.js"></script>
 		<script type="text/javascript" src="js/Contacts.js"></script>
 		<script type="text/javascript" src="js/Messages.js"></script>
 		<script type="text/javascript" src="js/Files.js"></script>
